Correcion de las Clases, CarritoServicioTest.java, TestCarrito.java, TestProducto.java. Correción de escritura en el codigo, inconsistencias borradas.
Correcion en pom.xml
Ahora -> JDK 21